--- a/gateway/templates/layout.html
+++ b/gateway/templates/layout.html
@@ -1,6 +1,5 @@
 {% extends "bootstrap_responsive.html" %}
 {% import "bootstrap_wtf.html" as wtf %}
-
 {% block title %}Gateway{% endblock %}
 
 {% block style_navbar_padding %}
@@ -9,6 +8,9 @@
             padding-top: 80px;
         }
     </style>
+  <!-- <link rel="stylesheet" href="{{ url_for('rq_dashboard.static', filename='css/bootstrap.min.css') }}"> -->
+  <link href="{{ url_for('rq_dashboard.static', filename='css/main.css') }}" rel="stylesheet">
+
 {% endblock %}
 
 {% block body_content %}
@@ -17,6 +19,9 @@
             <div class="navbar-inner">
                 <div class="container"> 
                     <a class="brand" href="{{ config['PROJECT_URL'] }}">Gateway</a>
+                    <ul class="nav">
+                        <li><a href="{{ url_for('rq_dashboard.overview') }}">{{ _('Dashboard') }}</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -31,3 +36,14 @@
     </div>
 
 {% endblock %}
+
+{%- block bootstrap_js_bottom %}
+    {{ super() }}
+
+    <script src="{{ url_for('rq_dashboard.static', filename='js/jquery.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('rq_dashboard.static', filename='js/underscore-min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('rq_dashboard.static', filename='js/sugar-1.2.1.min.js') }}" type="text/javascript"></script>
+    <script type="text/javascript">
+    {% block inline_js %}{% endblock %}
+    </script>
+{%- endblock %}
